--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,4 +1,10 @@
 @media only screen and (min-width: 800px){
+    #wrapper {
+        margin-left: auto;
+        margin-right: auto;
+        width: 1280px;
+    }
+    
     header {
         display: grid;
         grid-template-columns: 1fr 1fr 100px;
@@ -70,6 +76,8 @@
 
     #hero {
         position: relative;
+        grid-column: 2;
+        grid-row: 1/2;
     }
 
     #joinbutton {
@@ -95,6 +103,7 @@
         height: 300px;
         width: 250px;
         text-align: center;
+        margin: 0 auto;
     }
 
     #openingimg {
@@ -112,6 +121,7 @@
         width: 250px;
         text-align: center;
         margin-right: 53px;
+        margin: 0 auto;
 
     }
 
@@ -127,6 +137,7 @@
         height: 300px;
         width: 250px;
         text-align: center;
+        margin: 0 auto;
     }
 
     #joinimg {
@@ -144,11 +155,11 @@
     #news {
         grid-column: 2;
         grid-row: 3;
-        height: 300px;
+        height: 200px;
         margin-bottom: -200px;
     }
 
-    div.spotlight {
+    #spotlight {
         display: block;
         grid-column: 3;
         grid-row: 1/5;
