--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -41,7 +41,7 @@
         height: 200px;
     }
 
-    div.spotlight {
+    #spotlight {
         display: flex;
         justify-content: space-around;
     }
